--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+main {
+    display: grid;
+    margin: 20px;
+    grid-gap: 20px;
+}
+
+@media screen and (min-width: 750px) {
+    main {
+        grid-template-columns: 1fr 1fr;
+        margin: 20px;
+    }
+}
+
 .card {
     background-color: #1e434a;
     border-color: #268bd2;
