--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ main {
     }
 }
 
+ul {
+    list-style: none;
+}
+
+ul li::before {
+    content: "\2022";
+    color: white;
+    margin-right: 0.5rem;
+}
+
 .card {
     background-color: #1e434a;
     border-color: #268bd2;
