Updated Padding Slightly on Projects
I added two new classes to help with the
padding of my project cards. I also
reorganized them slighty to look more
appealing.

--- a/style.css
+++ b/style.css
@@ -39,6 +39,14 @@ ul li::before {
     border-color: #268bd2;
 }
 
+.project_title {
+    padding-bottom: 10px;
+}
+
+.description_container {
+    padding-top: 15px;
+}
+
 #portfolio_picture {
     border-style: solid;
     border-color: #268bd2;
