--- a/style.css
+++ b/style.css
@@ -4,15 +4,17 @@ main {
     -webkit-animation-name: transition;
     -webkit-animation-duration: 1s;
     animation-name: transition;
-    animation-duration: 0.75s;
+    animation-duration: 0.6s;
 }
 
 @keyframes transition {
     0% {
         opacity: 0.5;
+        left: -300px;
     }
     100% {
         opacity: 1;
+        left: 0px;
     }
 }
 
